修改kylin 文档